# ChangeLog for media-video/tvmovie2vdr
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tvmovie2vdr/ChangeLog,v 1.2 2004/07/12 00:40:46 austriancoder Exp $

*tvmovie2vdr-0.1.2 (12 July 2004)
  12 July 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*tvmovie2vdr-0.0.9 (24 March 2004)
  24 Mar 2004; Axel Katzur <vdr@katzur.de> tvmovie2vdr-0.9.ebuild,
  files/digest-tvmovie2vdr-0.9 ChangeLog:

  Initial ebuild by myself.