@@ -1,5 +1,7 @@
-MD5 acd23a4a62c8a6f8aa08c2e45b81f6cf ChangeLog 533
+MD5 495d63f1ffcbbd4e2cbcf76855d07912 ChangeLog 708
 MD5 5fd6f6f6d0a6c5110fc5d38f4cb2908d tvmovie2vdr-0.0.9.ebuild 2545
-MD5 ba0ddc121fd25a73217086927618591c tvmovie2vdr-0.1.2.ebuild 2428
+MD5 1a5f5400d8bc77b7e30a26e1679e368c tvmovie2vdr-0.1.2.ebuild 2428
+MD5 f065809e80939f781ced46ca7e1014e9 tvmovie2vdr-0.1.2-r1.ebuild 2267
 MD5 87f2bfd52ec9f61377a4acbaf49b6eb1 files/digest-tvmovie2vdr-0.0.9 68
 MD5 d11a486a9a39fd6d062a688cab1a209e files/digest-tvmovie2vdr-0.1.2 68
+MD5 d11a486a9a39fd6d062a688cab1a209e files/digest-tvmovie2vdr-0.1.2-r1 68
