@@ -1,6 +1,10 @@
 # ChangeLog for media-video/tvmovie2vdr
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tvmovie2vdr/ChangeLog,v 1.2 2004/07/12 00:40:46 austriancoder Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tvmovie2vdr/ChangeLog,v 1.3 2004/07/27 18:29:39 austriancoder Exp $
+
+*tvmovie2vdr-0.1.2-r1 (12 July 2004)
+  12 July 2004; Christian Gmeiner <christian at visual-page dot de>
+  fixed cpan modul installation - extra ebuild for String-Similarity
 
 *tvmovie2vdr-0.1.2 (12 July 2004)
   12 July 2004; Christian Gmeiner <christian at visual-page dot de>
